Alignment fix

--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@ body{
     height: 100vh;
 }
 
+.container{
+  text-align: center;
+}
+
+h1 {
+  margin-top: 0;
+}
+
 .grid-container {
     width: 700px ; 
     height: 700px;
